restore bearer-only api auth
